<resources>
    <string name="app_name">Toto</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="x">X</string>
    <string name="result">Result</string>
    <string name="to_main_menu">To main menu</string>
    <string name="start_new_game">Start new game</string>
    <string name="to_statistics">To statistics</string>
    <string name="toto">TOTO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_guess">Your Guess</string>
    <string name="correct_guess">Correct Guess</string>
    <string name="start_a_new_game">Start a new Game</string>
    <string name="sign_out">Log Out</string>
    <string name="statistics">Statistics</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="vs">VS</string>
    <string name="team_1">Team #1</string>
    <string name="match_1">Match #1</string>
    <string name="game_1">Game #1</string>
    <string name="_4">4</string>
    <string name="_1000_ft">1000 Ft</string>
    <string name="money_earned">Money earned:</string>
    <string name="of_correct_guesses"># of correct guesses</string>
</resources>