<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/offwhite">

        <TextView
            android:id="@+id/gameCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correctGuessesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/of_correct_guesses"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/correctGuesses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prizeMoneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_earned"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/prizeMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1000_ft"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>