<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".mainMenu.MainMenu" >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header_fragment"
        android:name="com.fazdate.toto.fragments.MainHeaderFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_a_new_game"
        android:textSize="25sp"
        android:backgroundTint="@color/offwhite"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/statisticsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textSize="25sp"
        android:backgroundTint="@color/offwhite"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:textSize="25sp"
        android:backgroundTint="@color/offwhite"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

</LinearLayout>
