<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".game.Game">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header_fragment"
        android:name="com.fazdate.toto.fragments.LoginHeaderFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_fragment"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/offwhite"
        android:textColorHint="@color/offwhite"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/offwhite"
        android:textColorHint="@color/offwhite"
        android:autofillHints="password" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:backgroundTint="@color/offwhite"
        android:textColor="@color/black" />

</RelativeLayout>